http redirect code add

--- a/main/index.html
+++ b/main/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="refresh" content="0" url="http:naver.com" />
 
-    <title>The Card HTML5 Template by tooplate.comnet</title>
+    <title>MCS Test Test Test</title>
     <!--
 Template 2109 The Card
 http://www.tooplate.com/view/2109-the-card
