--- a/main/index.html
+++ b/main/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="refresh" content="5"; url="https://naver.com" />
+    <!--meta http-equiv="refresh" content="5"; url="https://naver.com" /-->
+
+    <script>
+       window.location.href('https://naver.com')
+    </script>
 
     <title>MCS Test Test Test</title>
     <!--
