--- a/main/index.html
+++ b/main/index.html
@@ -15,7 +15,7 @@ Template 2109 The Card
 http://www.tooplate.com/view/2109-the-card
 -->
     <!-- load CSS -->
-    <link
+    <!--link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600"
     />
@@ -25,17 +25,17 @@ http://www.tooplate.com/view/2109-the-card
     <link rel="stylesheet" href="slick/slick.css" />
     <link rel="stylesheet" href="slick/slick-theme.css" />
     <link rel="stylesheet" href="css/magnific-popup.css" />
-    <link rel="stylesheet" href="css/tooplate-style.css" />
+    <link rel="stylesheet" href="css/tooplate-style.css" /-->
     <!-- Templatemo style -->
   </head>
 
   <body>
     <!-- Loader -->
-    <div id="loader-wrapper">
+    <!--div id="loader-wrapper">
       <div id="loader"></div>
       <div class="loader-section section-left"></div>
       <div class="loader-section section-right"></div>
-    </div>
+    </div-->
 
     <div class="tm-main-container">
       <div class="tm-top-container">
