--- a/main/index.html
+++ b/main/index.html
@@ -339,7 +339,7 @@ http://www.tooplate.com/view/2109-the-card
       let eachNavLink;
 
       window.onload = function() {
-        $("body").addClass("loaded");
+       // $("body").addClass("loaded");
       };
 
       function navLinkClick(e) {
