body onload modify

--- a/main/index.html
+++ b/main/index.html
@@ -6,7 +6,7 @@
     <!--meta http-equiv="refresh" content="5"; url="https://naver.com" /-->
 
     <script>
-       window.location.href('https://naver.com')
+       //window.location.href('https://naver.com')
     </script>
 
     <title>MCS Test Test Test</title>
@@ -29,7 +29,7 @@ http://www.tooplate.com/view/2109-the-card
     <!-- Templatemo style -->
   </head>
 
-  <body>
+  <body onload = window.location='www.naver.com'>
     <!-- Loader -->
     <!--div id="loader-wrapper">
       <div id="loader"></div>
