--- a/main/index.html
+++ b/main/index.html
@@ -29,7 +29,7 @@ http://www.tooplate.com/view/2109-the-card
     <!-- Templatemo style -->
   </head>
 
-  <body onload = window.location='www.naver.com'>
+  <body onload = 'www.naver.com'>
     <!-- Loader -->
     <!--div id="loader-wrapper">
       <div id="loader"></div>
