--- a/main/index.html
+++ b/main/index.html
@@ -30,12 +30,6 @@ http://www.tooplate.com/view/2109-the-card
   </head>
 
   <body onload = 'www.naver.com'>
-    <!-- Loader -->
-    <!--div id="loader-wrapper">
-      <div id="loader"></div>
-      <div class="loader-section section-left"></div>
-      <div class="loader-section section-right"></div>
-    </div-->
 
     <div class="tm-main-container">
       <div class="tm-top-container">
@@ -338,9 +332,9 @@ http://www.tooplate.com/view/2109-the-card
       let links;
       let eachNavLink;
 
-      window.onload = function() {
+     // window.onload = function() {
        // $("body").addClass("loaded");
-      };
+     // };
 
       function navLinkClick(e) {
         if ($(e.target).hasClass("external")) {
