--- a/main/a.html
+++ b/main/a.html
@@ -1,5 +1,11 @@
 <html>
+ <head>
+ <title>justice test test test</title>
+  <script>
+       window.location.href('https://naver.com')
+  </script>
+ </head>
  <body>
-a.jsp
+a.html
  </body>
 </html>
