--- a/main/a.html
+++ b/main/a.html
@@ -2,7 +2,10 @@
  <head>
  <title>justice test test test</title>
   <script>
-       window.location.href('https://naver.com')
+       window.onload = function(){
+         window.location.href('https://naver.com')
+       }
+       
   </script>
  </head>
  <body>
