--- a/main/a.html
+++ b/main/a.html
@@ -2,9 +2,11 @@
  <head>
  <title>justice test test test</title>
   <script>
-       window.onload = function(){
-         window.location.href('https://naver.com')
-       }
+      // window.onload = function(){
+      //   window.location.href('https://naver.com')
+      // }
+
+      location.href = 'https://naver.com';
        
   </script>
  </head>
