--- a/main/index.html
+++ b/main/index.html
@@ -65,10 +65,9 @@ http://www.tooplate.com/view/2109-the-card
         <header class="tm-site-header-box tm-bg-dark">
           <h1 class="tm-site-title">MCS TEST</h1>
 
-          <a href="intent://#Intent;scheme=http;package=com.android.chrome;end">안드로이드크롬앱 실행</a><br>
-          <a href="intent://mcs#Intent;scheme=mcs;package=go.scourt.mcs;end">안드 로 이드 법원앱 실행 없으면 스토어</a><br>
-          <a href="intent://starbucks#Intent;scheme=starbucks;package=com.starbucks.co;end">href 스타벅스</a><br>
-          <a href src="intent://starbucks#Intent;scheme=starbucks;package=com.starbucks.co;end">src 스타벅스</a><br>
+          <a href="intent://#Intent;scheme=mcs;package=go.scourt.mcs;end">안드 법원앱 실행 없으면 스토어</a><br>
+          <a href="intent://#Intent;scheme=line;package=jp.naver.line.android;end">안드 라인앱 실행 없으면 스토어</a><br>
+          <a href="intent://#Intent;scheme=starbucks;package=com.starbucks.co;end"> 스타벅스</a><br>
 
 
 
