--- a/main/index.html
+++ b/main/index.html
@@ -69,6 +69,8 @@ http://www.tooplate.com/view/2109-the-card
           <a href="intent://#Intent;scheme=line;package=jp.naver.line.android;end">안드 라인앱 실행 없으면 스토어</a><br>
           <a href="intent://#Intent;scheme=starbucks;package=com.starbucks.co;end"> 스타벅스</a><br>
 
+          <a href="intent://main/#Intent;scheme=mcs;package=go.scourt.mcs;end"> 20210906 test </a><br>
+
 
 
           <p class="mb-0 tm-site-subtitle">Free HTML Template for you</p>
