--- a/main/index.html
+++ b/main/index.html
@@ -71,6 +71,8 @@ http://www.tooplate.com/view/2109-the-card
 
           <a href="intent://main/#Intent;scheme=mcs;package=go.scourt.mcs;end"> 20210906 test </a><br>
 
+           <a href="intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end"> 20210906 13:44 test </a><br> 
+
 
 
           <p class="mb-0 tm-site-subtitle">Free HTML Template for you</p>
