--- a/main/index.html
+++ b/main/index.html
@@ -68,8 +68,8 @@ http://www.tooplate.com/view/2109-the-card
           <a href="intent://#Intent;scheme=line;package=jp.naver.line.android;end">라인앱</a><br>
           <a href="intent://#Intent;scheme=starbucks;package=com.starbucks.co;end"> 스타벅스</a><br>
 
-          <a href="intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end"> 대한민국법원앱(안드로이드) </a><br> 
-          <a href="mcs://main"> 대한민국법원앱(아이폰) </a><br> 
+          <a href="intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end"> 법원앱(안드로이드) </a><br> 
+          <a href="mcs://main"> 법원앱(아이폰) </a><br> 
 
 
 
