--- a/main/index.html
+++ b/main/index.html
@@ -7,6 +7,16 @@
 
     <script>
        //window.location.href('https://naver.com')
+
+       function ios_go_url(){
+        var url = "mcs://main";
+        setTimeout( function() {
+          window.open("https://itunes.apple.com/kr/app/id666427750");
+        }, 3000);
+
+        location.href = url;
+      }
+
     </script>
 
     <title>MCS Test Test Test</title>
@@ -69,7 +79,7 @@ http://www.tooplate.com/view/2109-the-card
           <a href="intent://#Intent;scheme=starbucks;package=com.starbucks.co;end"> 스타벅스</a><br>
 
           <a href="intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end"> 법원앱(안드로이드) </a><br> 
-          <a href="mcs://main"> 법원앱(아이폰) </a><br> 
+          <a href="ios_go_url()"> 법원앱(아이폰) </a><br> 
 
 
 
