--- a/main/index.html
+++ b/main/index.html
@@ -79,7 +79,7 @@ http://www.tooplate.com/view/2109-the-card
           <a href="intent://#Intent;scheme=starbucks;package=com.starbucks.co;end"> 스타벅스</a><br>
 
           <a href="intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end"> 법원앱(안드로이드) </a><br> 
-          <a href="ios_go_url()"> 법원앱(아이 폰) </a><br> 
+          <a href="javascript:ios_go_url()"> 법 원앱(아이 폰) </a><br> 
 
 
 
