--- a/main/index.html
+++ b/main/index.html
@@ -130,7 +130,9 @@
           <a href="intent://#Intent;scheme=starbucks;package=com.starbucks.co;end"> 스타벅스</a><br>
 
           <a href="intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end"> 법원앱(안드로이드) </a><br> 
-          <a href="javascript:ios_go_url2()"> 법 원앱(아이폰) </a><br> 
+
+          <a href="javascript:ios_go_url()"> 법 원앱(아이폰)111 </a><br> 
+          <a href="javascript:ios_go_url2()"> 법 원앱(아이폰)222 </a><br> 
 
           <!--span onclick="action_mcsapp('intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end', 'mcs://main', 'https://itunes.apple.com/kr/app/id666427750?mt=8')">MCS App 실행 </span-->
 
