--- a/main/index.html
+++ b/main/index.html
@@ -63,7 +63,7 @@
           //}, 1500);
           //location.href = ios_url;
 
-          ios_go_url2();
+          ios_go_url();
 
         }else{
          //location.href = android_url;
@@ -136,7 +136,7 @@
 
           <!--span onclick="action_mcsapp('intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end', 'mcs://main', 'https://itunes.apple.com/kr/app/id666427750?mt=8')">MCS App 실행 </span-->
 
-          <span onclick="action_mcsapp()">MCS App </span>
+          <span onclick="action_mcsapp()">MCS App  1516</span>
 
 
 
