--- a/main/a.html
+++ b/main/a.html
@@ -71,13 +71,17 @@
 
 
  <title>justice test test test</title>
-  <script>
+  <script type="text/javascript">
       // window.onload = function(){
       //   window.location.href('https://naver.com')
       // }
 
       //location.href = 'https://naver.com';
-      location.href = action_mcsapp();
+      //location.href = action_mcsapp();
+
+      $(document).ready(function(){
+        alert("TTTTT");
+      });
        
   </script>
  </head>
