--- a/main/a.html
+++ b/main/a.html
@@ -69,9 +69,7 @@
    }
     </script>
 
-
- <title>justice test test test</title>
-  <script type="text/javascript">
+    <script type="text/javascript">
       // window.onload = function(){
       //   window.location.href('https://naver.com')
       // }
@@ -79,11 +77,18 @@
       //location.href = 'https://naver.com';
       //location.href = action_mcsapp();
 
-      $(document).ready(function(){
+      //$(document).ready(function(){
+      //  alert("TTTTT");
+      //});
+
+      $(function(){
         alert("TTTTT");
       });
-       
   </script>
+
+
+ <title>justice test test test</title>
+
  </head>
  <body>
 a.html
