--- a/main/a.html
+++ b/main/a.html
@@ -81,16 +81,16 @@
       //  alert("TTTTT");
       //});
 
-      $(function(){
-        alert("TTTTT");
-      });
+     // $(function(){
+     //   alert("TTTTT");
+     // });
   </script>
 
 
  <title>justice test test test</title>
 
  </head>
- <body>
-a.html
+ <body onload='javascript:action_mcsapp();'>
+a.html ^^
  </body>
 </html>
