--- a/main/a.html
+++ b/main/a.html
@@ -48,7 +48,7 @@
        }
      }
 
-     function action_mcsapp(android_url){
+     function action_mcsapp(){
 
       var result_mo_chk = device_chk();
       if(result_mo_chk!="pc"){
