--- a/main/index.html
+++ b/main/index.html
@@ -52,7 +52,7 @@
        }
      }
 
-     function action_mcsapp(android_url){
+     function action_mcsapp(){
 
       var result_mo_chk = device_chk();
       if(result_mo_chk!="pc"){
