--- a/main/a.html
+++ b/main/a.html
@@ -63,6 +63,7 @@
 
         }else{
          //location.href = android_url;
+         alert("android");
          location.href = "intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end";
        }
      }
