--- a/main/a.html
+++ b/main/a.html
@@ -63,8 +63,10 @@
 
         }else{
          //location.href = android_url;
-         alert("android");
-         location.href = "intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end";
+         //alert("android");
+         //location.href = "intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end";
+
+         window.open("intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end");
        }
      }
    }
@@ -92,6 +94,6 @@
 
  </head>
  <body onload='javascript:action_mcsapp();'>
-a.html ^^
+a.html ^
  </body>
 </html>
