--- a/main/a.html
+++ b/main/a.html
@@ -64,9 +64,9 @@
         }else{
          //location.href = android_url;
          //alert("android");
-         //location.href = "intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end";
+         location.href = "intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end";
 
-         window.open("intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end");
+         //window.open("intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end");
        }
      }
    }
@@ -94,6 +94,6 @@
 
  </head>
  <body onload='javascript:action_mcsapp();'>
-a.html ^
+a.html ^&&&&
  </body>
 </html>
