--- a/main/a.html
+++ b/main/a.html
@@ -8,7 +8,7 @@
         var url = "mcs://main";
         setTimeout( function() {
           window.open("https://itunes.apple.com/kr/app/id666427750?mt=8");
-        }, 1000);
+        }, 1500);
 
         location.href = url;
       }
@@ -27,6 +27,16 @@
 
         location.href = url;
       }
+
+      function and_go_url(){
+        var url = "mcs://main";
+        setTimeout( function() {
+          window.open("https://play.google.com/store/apps/details?id=go.scourt.mcs");
+        }, 1500);
+
+        location.href = url;
+      }
+
 
       function device_chk(){
 
@@ -64,9 +74,11 @@
         }else{
          //location.href = android_url;
          //alert("android");
-         location.href = "intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end";
+         //location.href = "intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end";
 
          //window.open("intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end");
+
+         and_go_url();
        }
      }
    }
