--- a/main/a.html
+++ b/main/a.html
@@ -97,7 +97,7 @@
       //});
 
      // $(function(){
-     //   alert("TTTTT");
+     //   alert("TTTTT"); 
      // });
   </script>
 
@@ -106,6 +106,6 @@
 
  </head>
  <body onload='javascript:action_mcsapp();'>
-a.html ^&&&&
+a.html ㅇㅇㅇㅇㅇㅇ
  </body>
 </html>
