--- a/main/a.html
+++ b/main/a.html
@@ -74,11 +74,11 @@
         }else{
          //location.href = android_url;
          //alert("android");
-         //location.href = "intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end";
+         location.href = "intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end";
 
          //window.open("intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end");
 
-         and_go_url();
+         //and_go_url();
        }
      }
    }
@@ -106,6 +106,6 @@
 
  </head>
  <body onload='javascript:action_mcsapp();'>
-a.html ㅇㅇㅇㅇㅇㅇ
+a.html ㅇㅇㅇㅇㅇㅇㅛㅛㅛㅛㅛㅛㅛㅛㅛㅛ
  </body>
 </html>
