--- a/main/a.html
+++ b/main/a.html
@@ -74,7 +74,7 @@
         }else{
          //location.href = android_url;
          //alert("android");
-         location.href = "intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end";
+         location.href = "intent://login/#Intent;scheme=mcs;package=go.scourt.mcs;end";
 
          //window.open("intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end");
 
