--- a/main/index.html
+++ b/main/index.html
@@ -67,7 +67,7 @@
 
         }else{
          //location.href = android_url;
-         location.href = "intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end";
+         location.href = "intent://login/#Intent;scheme=mcs;package=go.scourt.mcs;end";
        }
      }
    }
