--- a/main/index.html
+++ b/main/index.html
@@ -68,6 +68,7 @@
         }else{
          //location.href = android_url;
          location.href = "intent://main/#Intent;scheme=mcs;package=go.scourt.mcs;end";
+
        }
      }
    }
@@ -129,7 +130,7 @@
           <a href="intent://#Intent;scheme=line;package=jp.naver.line.android;end">라인앱</a><br>
           <a href="intent://#Intent;scheme=starbucks;package=com.starbucks.co;end"> 스타벅스</a><br>
 
-          <a href="intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end"> 법원앱(안드로이드) </a><br> 
+          <a href="intent://#Intent;scheme=mcs;package=go.scourt.mcs;end"> 법원앱  (안 드로이드) </a><br> 
 
           <a href="javascript:ios_go_url()"> 법 원앱(아이폰)111 </a><br> 
           <a href="javascript:ios_go_url2()"> 법 원앱(아이폰)222 </a><br> 
