--- a/main/index.html
+++ b/main/index.html
@@ -67,7 +67,7 @@
 
         }else{
          //location.href = android_url;
-         location.href = "intent://main/#Intent;scheme=mcs;package=go.scourt.mcs;end";
+         location.href = "intent://Intro/#Intent;scheme=mcs;package=go.scourt.mcs;end";
 
        }
      }
