--- a/main/index.html
+++ b/main/index.html
@@ -133,7 +133,7 @@
           <a href="intent://#Intent;scheme=mcs;package=go.scourt.mcs;end"> 법원앱  (안 드로이드) </a><br> 
 
           <a href="javascript:ios_go_url()"> 법 원앱(아이폰)111 </a><br> 
-          <a href="javascript:ios_go_url2()"> 법 원앱(아이폰)222 </a><br> 
+          <!--a href="javascript:ios_go_url2()"> 법 원앱(아이폰)222 </a><br--> 
 
           <!--span onclick="action_mcsapp('intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end', 'mcs://main', 'https://itunes.apple.com/kr/app/id666427750?mt=8')">MCS App 실행 </span-->
 
@@ -142,7 +142,7 @@
 
 
 
-          <p class="mb-0 tm-site-subtitle">Free HTML Template for you</p>
+          <!--p class="mb-0 tm-site-subtitle">Free HTML Template for you</p-->
         </header>
       </div>
       <!-- tm-top-container -->
