--- a/main/index.html
+++ b/main/index.html
@@ -91,7 +91,7 @@
     <!-- Templatemo style -->
   </head>
 
-  <body>
+  <body onload="javascript:alert('aaa')">
 
     <div class="tm-main-container">
       <div class="tm-top-container">
