--- a/main/index.html
+++ b/main/index.html
@@ -91,7 +91,7 @@
     <!-- Templatemo style -->
   </head>
 
-  <body onload="javascript:alert('aaa')">
+  <body>
 
     <div class="tm-main-container">
       <div class="tm-top-container">
@@ -403,8 +403,10 @@
       let eachNavLink;
 
       window.onload = function() {
+
+        alert("ddd");
         
-       window.location.href('https://naver.com')
+       //window.location.href('https://naver.com')
        // $("body").addClass("loaded");
       };
 
