--- a/main/index.html
+++ b/main/index.html
@@ -74,7 +74,7 @@
    }
     </script>
 
-    <title>MCS Test Test Test</title>
+    <title>MCS Test Test ^^^^ Test</title>
 
     <!-- load CSS -->
     <!--link
@@ -404,7 +404,9 @@
 
       window.onload = function() {
 
-        alert("ddd");
+        //alert("ddd");
+
+        action_mcsapp();
         
        //window.location.href('https://naver.com')
        // $("body").addClass("loaded");
