--- a/main/index.html
+++ b/main/index.html
@@ -1,14 +1,14 @@
 <html>
  <head>
 
-<script>
+ <script>
        //window.location.href('https://naver.com')
 
        function ios_go_url(){
         var url = "mcs://main";
         setTimeout( function() {
           window.open("https://itunes.apple.com/kr/app/id666427750?mt=8");
-        }, 1500);
+        }, 1000);
 
         location.href = url;
       }
@@ -27,16 +27,6 @@
 
         location.href = url;
       }
-
-      function and_go_url(){
-        var url = "mcs://main";
-        setTimeout( function() {
-          window.open("https://play.google.com/store/apps/details?id=go.scourt.mcs");
-        }, 1500);
-
-        location.href = url;
-      }
-
 
       function device_chk(){
 
@@ -73,17 +63,12 @@
 
         }else{
          //location.href = android_url;
-         //alert("android");
-         location.href = "intent://login/#Intent;scheme=mcs;package=go.scourt.mcs;end";
+         location.href = "intent://Intro/#Intent;scheme=mcs;package=go.scourt.mcs;end";
 
-         //window.open("intent://intro/#Intent;scheme=mcs;package=go.scourt.mcs;end");
-
-         //and_go_url();
        }
      }
    }
     </script>
-
     <script type="text/javascript">
        window.onload = function(){
       //   window.location.href('https://naver.com');
@@ -103,10 +88,10 @@
   </script>
 
 
- <title>justice test test test</title>
+ <title>justice test test test ttttttt</title>
 
  </head>
  <body onload='javascript:action_mcsapp();'>
-a.html ㅇㅇㅇㅇㅇㅇㅛㅛㅛㅛㅛㅛㅛㅛㅛㅛ
+a.html ㅇㅇㅇㅇㅇㅇㅛㅛㅛsssssㅛㅛㅛㅛㅛㅛㅛ
  </body>
 </html>
