--- a/main/index.html
+++ b/main/index.html
@@ -58,21 +58,12 @@
      }
    }
 
-   function ios_go_url(){
-        var url = "mcs://main";
-        setTimeout( function() {
-          window.open("https://itunes.apple.com/kr/app/id666427750?mt=8");
-        }, 1000);
-
-        location.href = url;
-    }
-
-  </script>
-  <script type="text/javascript">
+ </script>
+ <script type="text/javascript">
        window.onload = function(){
-         action_mcsapp();
+      //   window.location.href('https://naver.com');
        };
-  </script>
+ </script>
 
 
  <title>MCSApp Call Test</title>
