--- a/main/index.html
+++ b/main/index.html
@@ -62,7 +62,7 @@
  <script type="text/javascript">
        window.onload = function(){
       //   window.location.href('https://naver.com');
-      action_mcsapp();
+      //action_mcsapp();
        };
  </script>
 
