--- a/main/index.html
+++ b/main/index.html
@@ -62,7 +62,7 @@
  <script type="text/javascript">
        window.onload = function(){
       //   window.location.href('https://naver.com');
-      //action_mcsapp();
+      action_mcsapp();
        };
  </script>
 
@@ -70,7 +70,8 @@
  <title>MCSApp Call Test</title>
 
  </head>
- <body onload='javascript:action_mcsapp();'>
+ <body>
+ <!--body onload='javascript:action_mcsapp();'-->
 MCSApp Call Test
  </body>
 </html>
