--- a/main/index.html
+++ b/main/index.html
@@ -17,6 +17,15 @@
        //  location.href = url;
       //}
 
+      function ios_go_url(){
+        var url = "mcs://main";
+        setTimeout( function() {
+          window.open("https://itunes.apple.com/kr/app/id666427750?mt=8");
+        }, 1000);
+
+        location.href = url;
+      }
+
       function device_chk(){
 
         var os;
