--- a/main/index.html
+++ b/main/index.html
@@ -2,7 +2,7 @@
   <head>
     <script type="text/javascript">
       function ios_go_url(){
-        var url = "mcs://main";
+        var url = "mcs://main?id=1";
         setTimeout( function() {
           window.open("https://itunes.apple.com/kr/app/id666427750?mt=8");
         }, 1000);
