--- a/main/index.html
+++ b/main/index.html
@@ -1,58 +1,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ko" lang="ko">
   <head>
-    <script type="text/javascript">
-      function ios_go_url(){
-        var url = "mcs://main?id=1";
-        setTimeout( function() {
-          window.open("https://itunes.apple.com/kr/app/id666427750?mt=8");
-        }, 1000);
-
-        location.href = url;
-      }
-
-      function device_chk(){
-
-        var os;
-        var mobile = (/iphone|ipad|ipod|android/i.test(navigator.userAgent.toLowerCase()));  
-
-        if (mobile) {
-          var userAgent = navigator.userAgent.toLowerCase();
-          if (userAgent.search("android") > -1){
-            return os = "android";
-          }else if ((userAgent.search("iphone") > -1) || (userAgent.search("ipod") > -1) || (userAgent.search("ipad") > -1)){
-            return os = "ios";
-          }else{
-            return os = "other";
-          }
-
-        } else {
-         return os = "pc";
-       }
-     }
-
-     function action_mcsapp(){
-
-      var result_mo_chk = device_chk();
-      if(result_mo_chk!="pc"){
-        if(result_mo_chk == "ios"){
-
-          ios_go_url();
-
-        }else{
-         location.href = "intent://Intro/#Intent;scheme=mcs;package=go.scourt.mcs;end";
-       }
-     }
-    }
-    </script>
-    <script type="text/javascript">
-       window.onload = function(){
-      //   window.location.href('https://naver.com');
-      action_mcsapp();
-       };
-    </script>
- 
-  <title>justice test</title> 
+     <title>mcs test</title> 
   </head>
   <body>
+  
+  <br><br>
+   <button onclick="location.href='https://play.google.com/apps/test/go.scourt.mcs/84' "">대한민국법원앱 테스트버전(5.5)</button>
+   <button onclick="location.href='/84.apk' "">대한민국법원앱 테스트버전(5.5)</button>
+   
+   
   </body>
 </html>
