--- a/main/index.html
+++ b/main/index.html
@@ -5,8 +5,8 @@
   <body>
   
   <br><br>
-   <button onclick="location.href='https://play.google.com/apps/test/go.scourt.mcs/84' "">대한민국법원앱 테스트버전(5.5)</button>
-   <button onclick="location.href='/84.apk' "">대한민국법원앱 테스트버전(5.5)</button>
+   <button onclick="location.href='https://play.google.com/console/internal-app-sharing' "">대한민국법원앱 테스트버전(5.5)^^</button>
+  
    
    
   </body>
