--- a/main/index.html
+++ b/main/index.html
@@ -5,7 +5,9 @@
   <body>
   
   <br><br>
-   <button onclick="location.href='https://play.google.com/console/internal-app-sharing' "">대한민국법원앱 테스트버전(5.5)^^</button>
+   <!--button onclick="location.href='https://play.google.com/console/internal-app-sharing' "">테스트버전 생성</button-->
+   <button onclick="location.href='https://play.google.com/apps/test/RQNrN8I3Fr0/ahAIGJVrd4sZkEFqcopgBvExOgEEL1U0vWVGKV1OmYxLPwojGeNG893FlljNHTvluP9Y9nq3s7uE2KnRuxpiVj40yU' "">태스트버전(5.5)</button>
+   
   
    
    
